# man5_sevice

./: build.gradle  local.properties  settings.gradle
control/: CMakeLists.txt  build.gradle
control/src/main/: AndroidManifest.xml
control/src/main/assets/: call.bnf
control/src/main/cpp/: zmodem.c
control/src/main/cpp/zmodem/: Make.dep  Makefile.host  README  crc16.c  crc32.c  debug.h  rz_main.c  sz_main.c  tags  zm.h  zm_dumpbuffer.c  zm_proto.c  zm_receive.c  zm_send.c  zm_state.c  zm_utils.c  zm_watchdog.c
control/src/main/cpp/zmodem/host/apps/: zmodem.h
control/src/main/cpp/zmodem/host/nuttx/: config.h
control/src/main/cpp/zmodem/nuttx/: config.h
control/src/main/cpp/zmodem/system/: zmodem.h
control/src/main/java/com/MAVLink/: MAVLinkPacket.java  Parser.java
control/src/main/java/com/MAVLink/Messages/: ApmCommands.java  ApmModes.java  MAVLinkMessage.java  MAVLinkPayload.java  MAVLinkStats.java
control/src/main/java/com/MAVLink/ardupilotmega/: CRC.java  msg_ahrs.java  msg_ahrs2.java  msg_airspeed_autocal.java  msg_ap_adc.java  msg_battery2.java  msg_camera_feedback.java  msg_camera_status.java  msg_compassmot_status.java  msg_data16.java  msg_data32.java  msg_data64.java  msg_data96.java  msg_digicam_configure.java  msg_digicam_control.java  msg_fence_fetch_point.java  msg_fence_point.java  msg_fence_status.java  msg_hwstatus.java  msg_limits_status.java  msg_meminfo.java  msg_mount_configure.java  msg_mount_control.java  msg_mount_status.java  msg_radio.java  msg_rally_fetch_point.java  msg_rally_point.java  msg_rangefinder.java  msg_sensor_offsets.java  msg_set_mag_offsets.java  msg_simstate.java  msg_wind.java
control/src/main/java/com/MAVLink/common/: CRC.java  msg_attitude.java  msg_attitude_quaternion.java  msg_attitude_quaternion_cov.java  msg_attitude_target.java  msg_auth_key.java  msg_debug.java  (+105 more)
control/src/main/res/layout/: activity_enginetest.xml  activity_h34.xml  activity_main.xml  activity_temp.xml
control/src/main/res/menu/: main.xml
control/src/main/res/values/: arrays.xml  strings.xml
control/src/main/res/values-en-rUS/: strings.xml
control/src/main/res/values-zh-rCN/: strings.xml
control/src/main/res/values-zh-rTW/: strings.xml
(+239 files in other folders)
